revoke core_header.jsp, fix install error

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ src/main/webapp/attached
 src/main/webapp/WEB-INF/classes
 src/main/webapp/WEB-INF/plugins/*
 src/main/webapp/include/templates/template*
+
+src/main/webapp/include/templates/README.md
+src/main/webapp/include/templates/.gitignore
