update pom.xml (must need tomcat7+ and java7+)

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ src/main/webapp/include/templates/template*
 src/main/webapp/include/templates/README.md
 src/main/webapp/include/templates/*.sh
 src/main/webapp/include/templates/.gitignore
+src/main/resources/rebel.xml
+tomcat.*
