--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.zrlog</groupId>
     <artifactId>zrlog</artifactId>
-    <version>2.1.3</version>
+    <version>2.1.4</version>
     <modules>
         <module>web</module>
         <module>service</module>
@@ -18,9 +18,10 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <jfinal.version>3.3</jfinal.version>
+        <jfinal.version>4.5</jfinal.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <servlet.version>3.1.0</servlet.version>
+        <maven.test.skip>true</maven.test.skip>
     </properties>
 
     <developers>
