--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.zrlog</groupId>
     <artifactId>zrlog</artifactId>
-    <version>2.1.4</version>
+    <version>2.1.5</version>
     <modules>
         <module>web</module>
         <module>service</module>
@@ -100,6 +100,11 @@
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
                 <version>2.3.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.7</version>
             </plugin>
         </plugins>
     </build>
