--- a/web/pom.xml
+++ b/web/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>zrlog</artifactId>
         <groupId>com.zrlog</groupId>
-        <version>2.1.10-SNAPSHOT</version>
+        <version>2.1.10</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,9 +13,11 @@
     <packaging>war</packaging>
 
     <properties>
-        <tomcat7Version>9.0.31</tomcat7Version>
+        <tomcat9Version>9.0.31</tomcat9Version>
         <tomcat-scope>compile</tomcat-scope>
         <contextPath>/${finalName}</contextPath>
+        <jarOutputDirectory>${project.basedir}/src/main/</jarOutputDirectory>
+        <libOutputPath>lib</libOutputPath>
     </properties>
 
     <dependencies>
@@ -57,32 +59,22 @@
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
-            <version>${tomcat7Version}</version>
+            <version>${tomcat9Version}</version>
             <scope>${tomcat-scope}</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
-            <version>${tomcat7Version}</version>
+            <version>${tomcat9Version}</version>
             <scope>${tomcat-scope}</scope>
         </dependency>
     </dependencies>
 
     <build>
-        <finalName>${finalName}-${project.version}</finalName>
         <plugins>
             <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <port>8080</port>
-                    <path>${contextPath}</path>
-                </configuration>
-            </plugin>
-            <plugin>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.3</version>
+                <version>3.2.3</version>
                 <configuration>
                     <resourceEncoding>${project.build.sourceEncoding}</resourceEncoding>
                     <warSourceDirectory>src/main/webapp</warSourceDirectory>
@@ -101,27 +93,64 @@
                         post/**
                         _cache/**
                     </packagingExcludes>
+                    <warName>${finalName}-${project.version}</warName>
                     <outputDirectory>${project.build.directory}/../../target</outputDirectory>
                 </configuration>
             </plugin>
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.1.0</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <recompressZippedFiles>true</recompressZippedFiles>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${jarOutputDirectory}/${libOutputPath}</outputDirectory>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>false</overWriteSnapshots>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <finalName>${finalName}</finalName>
+                    <classifier>${project.version}</classifier>
                     <archive>
                         <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>${libOutputPath}</classpathPrefix>
                             <mainClass>com.zrlog.web.Application</mainClass>
                         </manifest>
+                        <manifestEntries>
+                            <Class-Path>.</Class-Path>
+                        </manifestEntries>
                     </archive>
-                    <finalName>zrlog</finalName>
-                    <appendAssemblyId>false</appendAssemblyId>
-                    <outputDirectory>${project.build.directory}/../../target/</outputDirectory>
+                    <outputDirectory>${jarOutputDirectory}</outputDirectory>
                 </configuration>
-
             </plugin>
         </plugins>
     </build>
