Ignore junit lib when package zip file

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,6 @@ sim.pid
 .DS_Store
 .vscode
 pom.xml.versionsBackup
-tomcat.*
 /web/src/main/webapp/include/templates/default-2019/
 web/src/main/zrlog
+web/src/main/lib
