--- a/web/src/main/webapp/WEB-INF/db.properties
+++ b/web/src/main/webapp/WEB-INF/db.properties
@@ -1,4 +1,4 @@
 password=123456
-jdbcUrl=jdbc:mysql://demo.blog.zrlog.com:3306/zrlog_demo?characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=GMT
-user=zrlog_demo
+jdbcUrl=jdbc:mysql://demo.blog.zrlog.com:3306/zrlog_test?characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=GMT
+user=zrlog_test
 driverClass=com.mysql.cj.jdbc.Driver
