Add template config page

--- a/doc/nginx-zrlog-dev.conf
+++ b/doc/nginx-zrlog-dev.conf
@@ -15,6 +15,9 @@ server {
    location /admin/plugins/ {
       proxy_pass http://localhost:8080;
    }
+      location /admin/template/ {
+         proxy_pass http://localhost:8080;
+      }
   location /admin/logout {
      proxy_pass http://localhost:8080;
   }
