--- a/web/pom.xml
+++ b/web/pom.xml
@@ -105,7 +105,11 @@
                         **/css/*.map,
                         **/js/*.map,
                         admin/service-worker.js,
+                        admin/asset-manifest.json,
+                        admin/precache-manifest*,
                         install/service-worker.js,
+                        install/asset-manifest.json,
+                        install/precache-manifest*,
                     </packagingExcludes>
                     <warName>${finalName}-${project.version}</warName>
                     <outputDirectory>${project.build.directory}/../../target</outputDirectory>
