--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -4,6 +4,7 @@
   "homepage": "./",
   "private": true,
   "_location": "/vendors",
+  "license": "MIT",
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@testing-library/jest-dom": "4.2.4",
@@ -11,15 +12,16 @@
     "@testing-library/user-event": "7.1.2",
     "antd": "4.6.6",
     "axios": "0.20.0",
+    "font-awesome": "4.7.0",
     "history": "4.10.1",
+    "jquery": "3.5.1",
     "md5": "2.3.0",
     "react": "16.13.1",
+    "react-async-script": "1.2.0",
     "react-dom": "16.13.1",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.3",
-    "wrap-md-editor": "0.2.20",
-    "rc-tween-one": "2.2.10-beta.0"
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "rc-tween-one": "2.2.10-beta.0"
+    "rc-tween-one": "2.2.10-beta.0",
+    "react-loadable": "5.5.0"
   }
 }
