--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -25,9 +25,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts build",
+    "build": "npm run build:react && npm run build:bundle",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:react": "GENERATE_SOURCEMAP=false react-scripts build",
+    "build:bundle": "webpack --config webpack.config.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,6 +48,7 @@
   },
   "devDependencies": {
     "rc-tween-one": "2.2.10-beta.0",
-    "react-loadable": "5.5.0"
+    "react-loadable": "5.5.0",
+    "uglifyjs-webpack-plugin": "^2.2.0"
   }
 }
