--- a/pom.xml
+++ b/pom.xml
@@ -110,5 +110,14 @@
                 <version>2.7</version>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>com.github.eirslett</groupId>
+                    <artifactId>frontend-maven-plugin</artifactId>
+                    <version>1.11.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 </project>
