--- a/web/pom.xml
+++ b/web/pom.xml
@@ -13,7 +13,7 @@
     <packaging>war</packaging>
 
     <properties>
-        <tomcat9Version>9.0.35</tomcat9Version>
+        <tomcatVersion>9.0.35</tomcatVersion>
         <tomcat-scope>compile</tomcat-scope>
         <contextPath>/${finalName}</contextPath>
         <jarOutputDirectory>${project.basedir}/src/main/</jarOutputDirectory>
@@ -43,13 +43,13 @@
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
-            <version>${tomcat9Version}</version>
+            <version>${tomcatVersion}</version>
             <scope>${tomcat-scope}</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
-            <version>${tomcat9Version}</version>
+            <version>${tomcatVersion}</version>
             <scope>${tomcat-scope}</scope>
         </dependency>
     </dependencies>
