--- a/admin-web/src/main/frontend/package.json
+++ b/admin-web/src/main/frontend/package.json
@@ -20,14 +20,11 @@
     "react-async-script": "1.2.0",
     "react-dom": "17.0.1",
     "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.3"
+    "react-router-dom": "5.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,9 +42,90 @@
     ]
   },
   "devDependencies": {
+    "antd-theme-webpack-plugin": "1.3.9",
+    "babel-plugin-import": "1.13.3",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "customize-cra": "1.0.0",
+    "html-webpack-plugin": "5.3.1",
+    "less-loader": "7.3.0",
+    "less-vars-to-js": "1.3.0",
+    "mini-css-extract-plugin": "^1.6.0",
     "rc-input-number": "7.0.1",
     "rc-tween-one": "2.7.3",
     "rc-util": "5.8.1",
-    "react-loadable": "5.5.0"
+    "react-app-rewired": "2.1.8",
+    "react-dev-utils": "^11.0.4",
+    "react-loadable": "5.5.0",
+    "react-scripts": "4.0.3",
+    "terser-webpack-plugin": "^5.1.1",
+    "webpack": "^5.36.2",
+    "webpack-dev-server": "^3.11.2",
+    "less": "^4.1.1",
+    "@babel/core": "7.12.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
+    "@svgr/webpack": "5.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.0",
+    "babel-loader": "8.1.0",
+    "babel-plugin-named-asset-import": "^0.3.7",
+    "babel-preset-react-app": "^10.0.0",
+    "bfj": "^7.0.2",
+    "camelcase": "^6.1.0",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "css-loader": "4.3.0",
+    "dotenv": "8.2.0",
+    "dotenv-expand": "5.1.0",
+    "eslint": "^7.11.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-testing-library": "^3.9.2",
+    "eslint-webpack-plugin": "^2.1.0",
+    "file-loader": "6.1.1",
+    "fs-extra": "^9.0.1",
+    "html-webpack-plugin": "4.5.0",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "26.6.0",
+    "jest-circus": "26.6.0",
+    "jest-resolve": "26.6.0",
+    "jest-watch-typeahead": "0.6.1",
+    "mini-css-extract-plugin": "0.11.3",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "pnp-webpack-plugin": "1.6.4",
+    "postcss-flexbugs-fixes": "4.2.1",
+    "postcss-loader": "3.0.0",
+    "postcss-normalize": "8.0.1",
+    "postcss-preset-env": "6.7.0",
+    "postcss-safe-parser": "5.0.2",
+    "prompts": "2.4.0",
+    "react-app-polyfill": "^2.0.0",
+    "react-dev-utils": "^11.0.1",
+    "react-refresh": "^0.8.3",
+    "resolve": "1.18.1",
+    "resolve-url-loader": "^3.1.2",
+    "sass-loader": "8.0.2",
+    "semver": "7.3.2",
+    "style-loader": "1.3.0",
+    "terser-webpack-plugin": "4.2.3",
+    "ts-pnp": "1.2.0",
+    "url-loader": "4.1.1",
+    "webpack": "4.44.2",
+    "webpack-dev-server": "3.11.0",
+    "webpack-manifest-plugin": "2.2.0",
+    "workbox-webpack-plugin": "5.1.4",
+    "babel-plugin-polyfill-corejs2": "0.2.0",
+    "babel-plugin-polyfill-corejs3": "0.2.0",
+    "babel-plugin-polyfill-regenerator": "0.2.0"
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
   }
 }
