--- a/admin-web/src/main/frontend/package.json
+++ b/admin-web/src/main/frontend/package.json
@@ -21,13 +21,14 @@
     "react-dom": "17.0.1",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "craco-less": "1.17.1",
+    "@craco/craco": "6.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -49,5 +50,10 @@
     "rc-tween-one": "2.7.3",
     "rc-util": "5.8.1",
     "react-loadable": "5.5.0"
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
   }
 }
