--- a/admin-web/src/main/frontend/package.json
+++ b/admin-web/src/main/frontend/package.json
@@ -6,10 +6,10 @@
   "_location": "/vendors",
   "license": "MIT",
   "dependencies": {
-    "@ant-design/icons": "4.5.0",
-    "@testing-library/jest-dom": "4.2.4",
-    "@testing-library/react": "9.3.2",
-    "@testing-library/user-event": "7.1.2",
+    "@ant-design/icons": "4.6.2",
+    "@testing-library/jest-dom": "5.12.0",
+    "@testing-library/react": "11.2.6",
+    "@testing-library/user-event": "9.0.0",
     "antd": "4.13.1",
     "axios": "0.21.1",
     "font-awesome": "4.7.0",
@@ -20,10 +20,7 @@
     "react-async-script": "1.2.0",
     "react-dom": "17.0.1",
     "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.3",
-    "craco-less": "1.17.1",
-    "@craco/craco": "6.1.2"
+    "react-router-dom": "5.2.0"
   },
   "scripts": {
     "start": "craco start",
@@ -49,11 +46,9 @@
     "rc-input-number": "7.0.1",
     "rc-tween-one": "2.7.3",
     "rc-util": "5.8.1",
-    "react-loadable": "5.5.0"
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
+    "react-loadable": "5.5.0",
+    "react-scripts": "4.0.3",
+    "craco-less": "1.17.1",
+    "@craco/craco": "6.1.2"
   }
 }
