--- a/admin-web/src/main/frontend/package.json
+++ b/admin-web/src/main/frontend/package.json
@@ -7,9 +7,6 @@
   "license": "MIT",
   "dependencies": {
     "@ant-design/icons": "4.6.2",
-    "@testing-library/jest-dom": "5.12.0",
-    "@testing-library/react": "11.2.6",
-    "@testing-library/user-event": "9.0.0",
     "antd": "4.13.1",
     "axios": "0.21.1",
     "font-awesome": "4.7.0",
@@ -24,7 +21,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "GENERATE_SOURCEMAP=false craco build",
+    "build": "cross-env GENERATE_SOURCEMAP=false craco build",
     "test": "craco test"
   },
   "eslintConfig": {
@@ -48,6 +45,7 @@
     "rc-util": "5.8.1",
     "react-loadable": "5.5.0",
     "react-scripts": "4.0.3",
+    "cross-env": "7.0.3",
     "craco-less": "1.17.1",
     "@craco/craco": "6.1.2"
   }
