--- a/admin-web/src/main/frontend/package.json
+++ b/admin-web/src/main/frontend/package.json
@@ -7,21 +7,21 @@
   "license": "MIT",
   "dependencies": {
     "@ant-design/icons": "4.6.2",
-    "antd": "4.13.1",
+    "antd": "4.15.5",
     "axios": "0.21.1",
     "font-awesome": "4.7.0",
     "history": "4.10.1",
-    "jquery": "3.5.1",
+    "jquery": "3.6.0",
     "md5": "2.3.0",
-    "react": "17.0.1",
+    "react": "17.0.2",
     "react-async-script": "1.2.0",
-    "react-dom": "17.0.1",
+    "react-dom": "17.0.2",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0"
   },
   "scripts": {
     "start": "craco start",
-    "build": "cross-env GENERATE_SOURCEMAP=false craco build",
+    "build": "GENERATE_SOURCEMAP=false craco build",
     "test": "craco test"
   },
   "eslintConfig": {
@@ -45,7 +45,6 @@
     "rc-util": "5.8.1",
     "react-loadable": "5.5.0",
     "react-scripts": "4.0.3",
-    "cross-env": "7.0.3",
     "craco-less": "1.17.1",
     "@craco/craco": "6.1.2"
   }
