--- a/admin-web/src/main/frontend/package.json
+++ b/admin-web/src/main/frontend/package.json
@@ -17,7 +17,8 @@
     "react-async-script": "1.2.0",
     "react-dom": "17.0.2",
     "react-router": "5.2.0",
-    "react-router-dom": "5.2.0"
+    "react-router-dom": "5.2.0",
+    "screenfull": "5.1.0"
   },
   "scripts": {
     "start": "craco start",
