--- a/admin-token/pom.xml
+++ b/admin-token/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>zrlog</artifactId>
         <groupId>com.zrlog</groupId>
-        <version>2.2.1-SNAPSHOT</version>
+        <version>2.2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>com.zrlog</groupId>
             <artifactId>service</artifactId>
-            <version>2.2.1-SNAPSHOT</version>
+            <version>2.2.0</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
