--- a/blog-web/pom.xml
+++ b/blog-web/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>zrlog</artifactId>
         <groupId>com.zrlog</groupId>
-        <version>2.2.1-SNAPSHOT</version>
+        <version>2.2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>blog-web</artifactId>
@@ -14,12 +14,12 @@
         <dependency>
             <groupId>com.zrlog</groupId>
             <artifactId>admin-token</artifactId>
-            <version>2.2.1-SNAPSHOT</version>
+            <version>2.2.0</version>
         </dependency>
         <dependency>
             <groupId>com.zrlog</groupId>
             <artifactId>service</artifactId>
-            <version>2.2.1-SNAPSHOT</version>
+            <version>2.2.0</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
