Support subfolder again

--- a/admin-web/src/main/frontend/package.json
+++ b/admin-web/src/main/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "admin-web-frontend",
   "version": "0.1.0",
-  "homepage": "./",
+  "homepage": "./admin",
   "private": true,
   "_location": "/vendors",
   "license": "MIT",
