--- a/admin-web/src/main/frontend/package.json
+++ b/admin-web/src/main/frontend/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "GENERATE_SOURCEMAP=false craco build",
+    "build": "cross-env GENERATE_SOURCEMAP=false craco build",
     "test": "craco test"
   },
   "eslintConfig": {
@@ -47,6 +47,7 @@
     "react-loadable": "5.5.0",
     "react-scripts": "4.0.3",
     "craco-less": "1.17.1",
-    "@craco/craco": "6.1.2"
+    "@craco/craco": "6.1.2",
+    "cross-env":"7.0.3"
   }
 }
