--- a/web/pom.xml
+++ b/web/pom.xml
@@ -128,6 +128,7 @@
                 </executions>
                 <configuration>
                     <finalName>${finalName}</finalName>
+                    <classifier>starter</classifier>
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
