--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,16 @@
                 <plugin>
                     <groupId>com.github.eirslett</groupId>
                     <artifactId>frontend-maven-plugin</artifactId>
-                    <version>1.11.0</version>
+                    <version>1.12.0</version>
+                    <configuration>
+                        <nodeVersion>v16.13.1</nodeVersion>
+                        <yarnVersion>v1.22.17</yarnVersion>
+                        <workingDirectory>src/main/frontend</workingDirectory>
+                        <installDirectory>target</installDirectory>
+                        <nodeDownloadRoot>https://registry.npmmirror.com/mirrors/node/</nodeDownloadRoot>
+                        <yarnDownloadRoot>https://registry.npmmirror.com/mirrors/yarn/</yarnDownloadRoot>
+                        <npmRegistryURL>https://registry.npmmirror.com</npmRegistryURL>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
