--- a/admin-web/src/main/frontend/package.json
+++ b/admin-web/src/main/frontend/package.json
@@ -28,6 +28,25 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "devDependencies": {
+    "@craco/craco": "6.4.3",
+    "@types/jquery": "3.5.11",
+    "@types/react": "17.0.38",
+    "@types/react-async-script": "^1.2.1",
+    "@types/react-dom": "17.0.11",
+    "@types/react-loadable": "^5.5.6",
+    "@types/react-router": "5.1.17",
+    "@types/react-router-dom": "^5.3.2",
+    "@typescript-eslint/typescript-estree": "5.8.0",
+    "craco-less": "1.17.1",
+    "cross-env": "7.0.3",
+    "rc-input-number": "7.0.1",
+    "rc-tween-one": "2.7.3",
+    "rc-util": "5.8.1",
+    "react-loadable": "5.5.0",
+    "react-scripts": "4.0.3",
+    "typescript": "4.5.4"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -39,15 +58,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "rc-input-number": "7.0.1",
-    "rc-tween-one": "2.7.3",
-    "rc-util": "5.8.1",
-    "react-loadable": "5.5.0",
-    "react-scripts": "4.0.3",
-    "craco-less": "1.17.1",
-    "@craco/craco": "6.1.2",
-    "cross-env":"7.0.3"
   }
 }
