--- a/admin-web/src/main/frontend/package.json
+++ b/admin-web/src/main/frontend/package.json
@@ -13,6 +13,7 @@
     "history": "4.10.1",
     "jquery": "3.6.0",
     "md5": "2.3.0",
+    "rc-tween-one": "3.0.3",
     "react": "17.0.2",
     "react-async-script": "1.2.0",
     "react-dom": "17.0.2",
@@ -34,15 +35,12 @@
     "@types/react": "17.0.38",
     "@types/react-async-script": "^1.2.1",
     "@types/react-dom": "17.0.11",
-    "@types/react-loadable": "^5.5.6",
+    "@types/react-loadable": "5.5.6",
     "@types/react-router": "5.1.17",
-    "@types/react-router-dom": "^5.3.2",
-    "@typescript-eslint/typescript-estree": "5.8.0",
+    "@types/react-router-dom": "5.3.2",
+    "@typescript-eslint/typescript-estree": "5.8.1",
     "craco-less": "1.17.1",
     "cross-env": "7.0.3",
-    "rc-input-number": "7.0.1",
-    "rc-tween-one": "2.7.3",
-    "rc-util": "5.8.1",
     "react-loadable": "5.5.0",
     "react-scripts": "4.0.3",
     "typescript": "4.5.4"
