--- a/admin-web/src/main/frontend/package.json
+++ b/admin-web/src/main/frontend/package.json
@@ -33,7 +33,7 @@
     "@craco/craco": "6.4.3",
     "@types/jquery": "3.5.11",
     "@types/react": "17.0.38",
-    "@types/react-async-script": "^1.2.1",
+    "@types/react-async-script": "1.2.1",
     "@types/react-dom": "17.0.11",
     "@types/react-loadable": "5.5.6",
     "@types/react-router": "5.1.17",
