--- a/.mvn/wrapper/maven-wrapper.properties
+++ b/.mvn/wrapper/maven-wrapper.properties
@@ -1,1 +1,1 @@
-distributionUrl=https://repo1.maven.org/maven2/org/apache/maven/apache-maven/3.8.4/apache-maven-3.8.4-bin.zip
+distributionUrl=https://maven.aliyun.com/nexus/content/groups/public/org/apache/maven/apache-maven/3.8.4/apache-maven-3.8.4-bin.zip
