--- a/admin-web/src/main/frontend/tsconfig.json
+++ b/admin-web/src/main/frontend/tsconfig.json
@@ -8,6 +8,7 @@
     "jsx": "react-jsx",
     "baseUrl": "src",
     "sourceRoot": "src",
+    "sourceMap": true,
     "lib": [
       "dom",
       "es2017"
