--- a/doc/nginx-zrlog-dev.conf
+++ b/doc/nginx-zrlog-dev.conf
@@ -34,5 +34,8 @@ server {
       }
       location /sockjs-node {
          proxy_pass http://localhost:3000;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection "upgrade";
       }
 }
