--- a/blog-web/pom.xml
+++ b/blog-web/pom.xml
@@ -55,7 +55,7 @@
                             <goal>yarn</goal>
                         </goals>
                         <configuration>
-                            <arguments>install</arguments>
+                            <arguments>install --frozen-lockfile</arguments>
                         </configuration>
                     </execution>
                     <execution>
