--- a/pom.xml
+++ b/pom.xml
@@ -157,8 +157,9 @@
                     <artifactId>frontend-maven-plugin</artifactId>
                     <version>1.12.0</version>
                     <configuration>
-                        <nodeVersion>v16.13.1</nodeVersion>
+                        <nodeVersion>v16.15.1</nodeVersion>
                         <yarnVersion>v1.22.18</yarnVersion>
+                        <npmVersion>8.11.0</npmVersion>
                         <workingDirectory>src/main/frontend</workingDirectory>
                         <installDirectory>target</installDirectory>
                         <nodeDownloadRoot>https://npmmirror.com/mirrors/node/</nodeDownloadRoot>
