--- a/.github/workflows/build-preview-packge.yml
+++ b/.github/workflows/build-preview-packge.yml
@@ -1,4 +1,4 @@
-name: ZrLog package
+name: ZrLog build preview package
 on:
   push:
     branches:
@@ -22,4 +22,4 @@ jobs:
         run: |
           mkdir -p /tmp/download
           bash -e bin/build-final-package.sh preview 预览版 /tmp/download
-          bash shell/upload-bin.sh ${{ secrets.SECRET_ID }} ${{ secrets.SECRET_KEY }} ${{ secrets.BUCKET }} /tmp/download
+          bash bin/upload-bin.sh ${{ secrets.SECRET_ID }} ${{ secrets.SECRET_KEY }} ${{ secrets.BUCKET }} /tmp/download
