--- a/.github/workflows/build-release-packge.yml
+++ b/.github/workflows/build-release-packge.yml
@@ -22,4 +22,4 @@ jobs:
         run: |
           mkdir -p /tmp/download
           bash -e bin/build-final-package.sh release 正式版本 /tmp/download
-          bash bin/upload-bin.sh ${{ secrets.SECRET_ID }} ${{ secrets.SECRET_KEY }} ${{ secrets.BUCKET }} /tmp/download
+          bash bin/upload-bin.sh ${{ secrets.SECRET_ID }} ${{ secrets.SECRET_KEY }} ${{ secrets.BUCKET }} /tmp/download/release
