--- a/.gitignore
+++ b/.gitignore
@@ -53,5 +53,13 @@ release
 node_modules
 *.zip
 temp
-cache
+cache/**
 ._.DS_Store
+static/include/templates/ossutil
+static/include/templates/errors
+static/include/templates/.github/
+static/include/templates/.gitignore
+static/include/templates/README.md
+static/include/templates/bin/
+static/include/templates/generate-preview.sh
+static/include/templates/zip/
