--- a/admin-web/src/main/frontend/package.json
+++ b/admin-web/src/main/frontend/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "node": "18.9.0",
+    "node-bin-darwin-arm64": "18.9.0",
     "react-scripts": "5.0.1",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
