--- a/blog-web/src/main/frontend/package.json
+++ b/blog-web/src/main/frontend/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "node": "18.9.0",
+    "node-bin-darwin-arm64": "18.9.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/react-loadable": "5.5.6",
