--- a/common/pom.xml
+++ b/common/pom.xml
@@ -8,8 +8,8 @@
         <version>3.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>common</artifactId>
+    <version>3.0.2-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
