--- a/data/pom.xml
+++ b/data/pom.xml
@@ -8,7 +8,7 @@
         <version>3.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <version>3.0.2-SNAPSHOT</version>
     <artifactId>data</artifactId>
 
     <dependencies>
