Optimize default template

--- a/blog-web/src/main/resources/include/templates/default/template.properties
+++ b/blog-web/src/main/resources/include/templates/default/template.properties
@@ -4,4 +4,4 @@ url=https://blog.zrlog.com
 digest=
 version=0.5
 previewImages=images/preview.webp
-staticResource=css/bootstrap.min.css,css/editormd.css,css/style_v3.css,js/auto-theme.js,js/bootstrap.min.js,js/jquery-1.10.2.min.js
+staticResource=css/bootstrap.min.css,css/editormd.css,css/style_v3.css,js/auto-theme.js,js/bootstrap.bundle.min.js
