--- a/.github/workflows/ubuntu-arm64-self-hosted-build-release-native.yml
+++ b/.github/workflows/ubuntu-arm64-self-hosted-build-release-native.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ ubuntu-22.04 ]
+        os: [ ubuntu-latest ]
         architecture: [ arm64 ]
     steps:
       - uses: actions/checkout@v3
