--- a/.github/workflows/ubuntu-amd64-build-release-native.yml
+++ b/.github/workflows/ubuntu-amd64-build-release-native.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Build and upload binary
         run: |
           mkdir -p /tmp/download
-          bash -e bin/build-final-native.sh release 正式版本 /tmp/download unix
+          bash -e bin/build-final-native.sh release 正式版本 /tmp/download ubuntu
           bash -e bin/upload-bin.sh ${{ secrets.SECRET_ID }} ${{ secrets.SECRET_KEY }} ${{ secrets.BUCKET }} /tmp/download release
