--- a/.github/workflows/ubuntu-arm64-build-preview-native.yml
+++ b/.github/workflows/ubuntu-arm64-build-preview-native.yml
@@ -1,4 +1,4 @@
-name: build on Linux amd64 preview native
+name: build on Linux arm64 preview native
 on:
   push:
     branches:
@@ -6,12 +6,14 @@ on:
 jobs:
   build:
     name: ZrLog on ${{ matrix.os }} ${{ matrix.architecture }}
+#    runs-on: [self-hosted, Linux, X64]
+#    runs-on: buildjet-4vcpu-ubuntu-2204-arm
     runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
-        os: [ ubuntu-20.04 ]
-        architecture: [ amd64 ]
+        os: [ ubuntu-24.04-arm ]
+        architecture: [ arm64 ]
     steps:
       - uses: actions/checkout@v3
         with:
