--- a/.github/workflows/ubuntu-arm64-build-release-native.yml
+++ b/.github/workflows/ubuntu-arm64-build-release-native.yml
@@ -1,8 +1,8 @@
-name: build on Linux amd64 preview native
+name: build on Linux arm64 release native
 on:
   push:
     branches:
-      - master
+      - release
 jobs:
   build:
     name: ZrLog on ${{ matrix.os }} ${{ matrix.architecture }}
@@ -10,8 +10,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ ubuntu-20.04 ]
-        architecture: [ amd64 ]
+        os: [ ubuntu-24.04-arm ]
+        architecture: [ arm64 ]
     steps:
       - uses: actions/checkout@v3
         with:
@@ -27,5 +27,5 @@ jobs:
       - name: Build and upload binary
         run: |
           mkdir -p /tmp/download
-          bash -e bin/build-final-native.sh preview 预览版 /tmp/download ubuntu
-          bash -e bin/upload-bin.sh ${{ secrets.SECRET_ID }} ${{ secrets.SECRET_KEY }} ${{ secrets.BUCKET }} /tmp/download preview
+          bash -e bin/build-final-native.sh release 正式版本 /tmp/download ubuntu
+          bash -e bin/upload-bin.sh ${{ secrets.SECRET_ID }} ${{ secrets.SECRET_KEY }} ${{ secrets.BUCKET }} /tmp/download release
