--- a/package-web/pom.xml
+++ b/package-web/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <groupId>com.zrlog</groupId>
         <artifactId>zrlog</artifactId>
-        <version>3.1.5-SNAPSHOT</version>
+        <version>3.1.6-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>package-web</artifactId>
-    <version>3.1.5-SNAPSHOT</version>
+    <version>3.1.6-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -18,6 +18,10 @@
         <imageName>zrlog</imageName>
         <native.maven.plugin.version>0.10.2</native.maven.plugin.version>
         <libOutputPath>lib</libOutputPath>
+        <native.target>../</native.target>
+        <packageName>zrlog</packageName>
+        <architecture>all</architecture>
+        <gitCommitId>0000000</gitCommitId>
     </properties>
 
     <dependencies>
@@ -196,6 +200,88 @@
                             </archive>
                             <outputDirectory>../</outputDirectory>
                         </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>jdeb</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>jdeb</artifactId>
+                        <groupId>org.vafer</groupId>
+                        <version>1.13</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jdeb</goal>
+                                </goals>
+                                <configuration>
+                                    <snapshotExpand>true</snapshotExpand>
+                                    <snapshotEnv>USER</snapshotEnv>
+                                    <skipPOMs>false</skipPOMs>
+                                    <deb>
+                                        [[buildDir]]/[[artifactId]]_[[version]]+[[gitCommitId]]_[[architecture]].[[extension]]
+                                    </deb>
+                                    <changesOut>
+                                        [[buildDir]]/[[artifactId]]_[[version]]+[[gitCommitId]]_[[architecture]].changes
+                                    </changesOut>
+                                    <controlDir>${basedir}/src/deb/control</controlDir>
+                                    <dataSet>
+                                        <data>
+                                            <src>${native.target}/zrlog</src>
+                                            <type>file</type>
+                                            <mapper>
+                                                <type>perm</type>
+                                                <prefix>/usr/bin</prefix>
+                                                <user>zrlog</user>
+                                                <group>zrlog</group>
+                                                <filemode>777</filemode>
+                                            </mapper>
+                                        </data>
+                                        <data>
+                                            <src>${basedir}/src/deb/init.d</src>
+                                            <type>directory</type>
+                                            <mapper>
+                                                <type>perm</type>
+                                                <prefix>/etc/init.d</prefix>
+                                                <user>zrlog</user>
+                                                <group>zrlog</group>
+                                                <filemode>777</filemode>
+                                            </mapper>
+                                        </data>
+                                        <data>
+                                            <src>../README.md</src>
+                                            <type>file</type>
+                                            <mapper>
+                                                <type>perm</type>
+                                                <prefix>/etc/zrlog</prefix>
+                                                <user>zrlog</user>
+                                                <group>zrlog</group>
+                                                <filemode>777</filemode>
+                                            </mapper>
+                                        </data>
+                                        <data>
+                                            <src>../bin/config/zrlog.properties</src>
+                                            <type>file</type>
+                                            <mapper>
+                                                <type>perm</type>
+                                                <prefix>/etc/zrlog</prefix>
+                                                <user>zrlog</user>
+                                                <group>zrlog</group>
+                                                <filemode>777</filemode>
+                                            </mapper>
+                                        </data>
+                                    </dataSet>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
                     </plugin>
                 </plugins>
             </build>
