[shell-release]next version 3.1.6-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.zrlog</groupId>
     <artifactId>zrlog</artifactId>
     <packaging>pom</packaging>
-    <version>3.1.5</version>
+    <version>3.1.6-SNAPSHOT</version>
     <modules>
         <module>web</module>
         <module>service</module>
@@ -91,37 +91,37 @@
             <dependency>
                 <groupId>com.zrlog</groupId>
                 <artifactId>common</artifactId>
-                <version>3.1.5</version>
+                <version>3.1.6-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.zrlog</groupId>
                 <artifactId>data</artifactId>
-                <version>3.1.5</version>
+                <version>3.1.6-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.zrlog</groupId>
                 <artifactId>admin-token</artifactId>
-                <version>3.1.5</version>
+                <version>3.1.6-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.zrlog</groupId>
                 <artifactId>blog-web</artifactId>
-                <version>3.1.5</version>
+                <version>3.1.6-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.zrlog</groupId>
                 <artifactId>service</artifactId>
-                <version>3.1.5</version>
+                <version>3.1.6-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.zrlog</groupId>
                 <artifactId>admin-web</artifactId>
-                <version>3.1.5</version>
+                <version>3.1.6-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.zrlog</groupId>
                 <artifactId>web</artifactId>
-                <version>3.1.5</version>
+                <version>3.1.6-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
