--- a/data/pom.xml
+++ b/data/pom.xml
@@ -5,10 +5,10 @@
     <parent>
         <artifactId>zrlog</artifactId>
         <groupId>com.zrlog</groupId>
-        <version>3.1.5</version>
+        <version>3.1.6-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <version>3.1.5</version>
+    <version>3.1.6-SNAPSHOT</version>
     <artifactId>data</artifactId>
 
     <dependencies>
