Update contact email info

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <developers>
         <developer>
             <name>xiaochun</name>
-            <email>90xchun@gmail.com</email>
+            <email>support@zrlog.com</email>
             <url>https://xiaochun.zrlog.com</url>
             <roles>
                 <role>owner</role>
