--- a/package-web/src/deb/control/control
+++ b/package-web/src/deb/control/control
@@ -1,7 +1,7 @@
 Version: [[version]]+[[gitCommitId]]
 Section: build-web-system
 Priority: optional
-Maintainer: "xiaochun" 90xchun@gmail.com
+Maintainer: "zrlog" support@zrlog.com
 Package: [[packageName]]
 Architecture: all
 Depends:
