Remove faas mysql support

--- a/.github/workflows/faas-build-preview-package-zip.yml
+++ b/.github/workflows/faas-build-preview-package-zip.yml
@@ -26,5 +26,5 @@ jobs:
       - name: Build and upload binary
         run: |
           mkdir -p /tmp/download
-          bash -e shell/native/build-final-native.sh preview 预览版 /tmp/download zip faas
+          bash -e shell/native/build-final-native.sh preview 预览版 /tmp/download faas
           bash -e shell/upload-bin.sh ${{ secrets.SECRET_ID }} ${{ secrets.SECRET_KEY }} ${{ secrets.BUCKET }} /tmp/download preview ${{ secrets.HOST }}
